# navtui

./: .gitignore  AGENTS.md  AI_TRANSPARENCY.MD  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.MD  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.0.0-rc1.MD  TUI-test.MD  TUI.MD  plan.MD
.github/workflows/: ci.yml  release.yml
scripts/: install_local.sh  package_release.sh
src/: app.rs  auth.rs  cache.rs  config.rs  library.rs  main.rs  model.rs  playback.rs  state.rs  subsonic.rs
