[package]
name = "navtui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "=0.27.0"
dialoguer = "0.12"
dirs = "6.0"
keyring = { version = "3.6", default-features = false, features = ["linux-native-sync-persistent", "windows-native"] }
md5 = "0.8"
rand = "0.9"
ratatui = "=0.26.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
